# dune-ner

./: .gitignore  README.md  main.py  pyproject.toml
data/raw/: aliases.json  entities.json
dune_ner/: clean.py  data.py  epub.py  graph.py  outlines.py  parse.py  prompt.py  pydantic.py  spacy.py
